force-app/main/default/objects/OpponentLineup__c/OpponentLineup__c.object-meta.xml
<CustomObject>
    <description>Compo adverse (titulaire/remplaçant) par match.</description>
    <label>Opponent Lineup</label>
    <nameField>
        <displayFormat>OL-{00000}</displayFormat>
        <label>Opponent Lineup Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opponent Lineups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>