force-app/main/default/objects/OpponentLineup__c/fields/OpponentMatch__c.field-meta.xml
<CustomField>
    <fullName>OpponentMatch__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opponent Match</label>
    <referenceTo>OpponentMatch__c</referenceTo>
    <relationshipLabel>Opponent Lineups</relationshipLabel>
    <relationshipName>OpponentLineups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>