force-app/main/default/objects/OpponentLineup__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GK</fullName>
            </value>
            <value>
                <fullName>RB</fullName>
            </value>
            <value>
                <fullName>RCB</fullName>
            </value>
            <value>
                <fullName>CB</fullName>
            </value>
            <value>
                <fullName>LCB</fullName>
            </value>
            <value>
                <fullName>LB</fullName>
            </value>
            <value>
                <fullName>RWB</fullName>
            </value>
            <value>
                <fullName>LWB</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>RW</fullName>
            </value>
            <value>
                <fullName>LW</fullName>
            </value>
            <value>
                <fullName>ST</fullName>
                <default>true</default>
                <label>ST</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>