force-app/main/default/objects/OpponentLineup__c/fields/Starter__c.field-meta.xml
<CustomField>
    <fullName>Starter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Starter</label>
    <type>Checkbox</type>
</CustomField>