force-app/main/default/objects/OpponentLineup__c/fields/ThreatTags__c.field-meta.xml
<CustomField>
    <fullName>ThreatTags__c</fullName>
    <label>Threat Tags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>